kubernetes/apps/grimmory/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grimmory
  namespace: grimmory
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`books.pxldi.de`)
      kind: Rule
      services:
        - name: grimmory
          port: 6060
